4_demo_canary_traefik/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-status-v2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    name: api-status-nginx
    label: green
