4_demo_canary_traefik/prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-status-v1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    name: api-status-nginx
    label: blue
